change deeplink url

--- a/deeplink2.html
+++ b/deeplink2.html
@@ -22,7 +22,7 @@
                 var config = {
                     /*scheme:必须*/
                     scheme_IOS: 'will://',
-                    scheme_Adr: 'eticket://share/testid',
+                    scheme_Adr: 'eticket://ticketId/20120',
                     download_url: document.getElementById('J-download-app').value,
                     timeout: 600
                 };
